--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "node-sass": "^4.13.1",
+    "dotenv-webpack": "^1.7.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5"
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "node-sass": "^4.13.1",
     "sass": "^1.26.3"
   }
 }
