--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/runtime": "^7.9.2",
     "node-sass": "^4.13.1",
     "sass": "^1.26.3"
   }
