--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "dotenv-webpack": "^1.7.0",
+    "firebase": "^7.14.1",
+    "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spinner-material": "^1.3.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
